src/test/ui/consts/miri_unleashed/nrvo.stderr
warning: skipping const checks
   |
help: skipping check for `const_mut_refs` feature
  --> $DIR/nrvo.rs:5:5
   |
LL |     buf[33] = 3;
   |     ^^^^^^^^^^^
help: skipping check for `const_mut_refs` feature
  --> $DIR/nrvo.rs:6:5
   |
LL |     buf[444] = 4;
   |     ^^^^^^^^^^^^
help: skipping check for `const_mut_refs` feature
  --> $DIR/nrvo.rs:11:10
   |
LL |     init(&mut buf);
   |          ^^^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/nrvo.rs:11:5
   |
LL |     init(&mut buf);
   |     ^^^^^^^^^^^^^^

error: `-Zunleash-the-miri-inside-of-you` may not be used to circumvent feature gates, except when testing error paths in the CTFE engine

error: aborting due to previous error; 1 warning emitted

